--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url =https://jeanothniel-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/https://jeanothniel-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+backend_url =https://jeanothniel-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
 sentiment_analyzer_url=https://sentianalyzer.1s7iiyxz1stl.us-south.codeengine.appdomain.cloud/
